feat: Add preorder production status handling in purchase history - Disable download/preview buttons for preorder items without PDF - Add multilingual support for production in progress status - Filter out in-progress preorder items from bulk downloads

--- a/src/i18n/locales/de/mypage.json
+++ b/src/i18n/locales/de/mypage.json
@@ -86,7 +86,9 @@
     "noDownloads": "Keine herunterladbaren Notenblätter verfügbar.",
     "purchaseDate": "Kaufdatum",
     "preview": "Vorschau",
-    "downloadUnavailable": "Download nicht verfügbar"
+    "downloadUnavailable": "Download nicht verfügbar",
+    "preorderInProgress": "Produktion läuft",
+    "preorderInProgressWithDeadline": "Produktion läuft (~{{deadline}} voraussichtliche Fertigstellung)"
   },
   "favorites": {
     "title": "Favorisierte Notenblätter",
