--- a/src/i18n/locales/ko/mypage.json
+++ b/src/i18n/locales/ko/mypage.json
@@ -88,7 +88,9 @@
     "download": "다운로드",
     "preview": "미리보기",
     "downloadUnavailable": "다운로드 불가",
-    "goToPurchaseHistory": "구매내역 페이지로 이동"
+    "goToPurchaseHistory": "구매내역 페이지로 이동",
+    "preorderInProgress": "제작 진행 중",
+    "preorderInProgressWithDeadline": "제작 진행 중 (~{{deadline}} 완성 예정)"
   },
   "favorites": {
     "title": "찜한 악보",
