feat: ?좎＜臾??곹뭹 ?덉긽 ?꾨즺??湲곕뒫 異붽? 諛??쇨큵 ?섏젙 湲곕뒫 援ы쁽
- ?곸뾽??湲곗? ?덉긽 ?꾨즺???먮룞 怨꾩궛 濡쒖쭅 異붽? (?쒓뎅 ?쒓컙 湲곗?, 留덇컧 ?쒓컙 洹쒖튃 ?곸슜)
- 二쇰Ц ?앹꽦 ???좎＜臾??곹뭹???덉긽 ?꾨즺???먮룞 怨꾩궛 諛????- 留덉씠?섏씠吏 援щℓ ?댁뿭???덉긽 ?꾨즺???쒖떆
- 愿由ъ옄 ?섏씠吏 二쇰Ц 援щ텇 諭껋? 異붽? (?쇰컲/?좎＜臾?
- 愿由ъ옄 ?섏씠吏 ?덉긽 ?꾨즺???섏젙 湲곕뒫 (媛쒕퀎 諛??쇨큵 ?섏젙)
- ?덉긽 ?꾨즺???낅뜲?댄듃 API ?붾뱶?ъ씤??異붽?
- 17媛쒓뎅???ㅺ뎅???뚯씪 ?낅뜲?댄듃
- dayjs ?⑦궎吏 異붽? (?쒓컙? 泥섎━)

--- a/src/i18n/locales/de/mypage.json
+++ b/src/i18n/locales/de/mypage.json
@@ -88,7 +88,8 @@
     "preview": "Vorschau",
     "downloadUnavailable": "Download nicht verfügbar",
     "preorderInProgress": "Produktion läuft",
-    "preorderInProgressWithDeadline": "Produktion läuft (~{{deadline}} voraussichtliche Fertigstellung)"
+    "preorderInProgressWithDeadline": "Produktion läuft (~{{deadline}} voraussichtliche Fertigstellung)",
+    "expectedCompletionDate": "Voraussichtliches Datum: {{date}}"
   },
   "favorites": {
     "title": "Favorisierte Notenblätter",
