--- a/src/i18n/locales/hi/mypage.json
+++ b/src/i18n/locales/hi/mypage.json
@@ -88,7 +88,8 @@
     "preview": "पूर्वावलोकन",
     "downloadUnavailable": "डाउनलोड उपलब्ध नहीं है",
     "preorderInProgress": "उत्पादन प्रगति में",
-    "preorderInProgressWithDeadline": "उत्पादन प्रगति में (~{{deadline}} अपेक्षित पूर्णता)"
+    "preorderInProgressWithDeadline": "उत्पादन प्रगति में (~{{deadline}} अपेक्षित पूर्णता)",
+    "expectedCompletionDate": "अपेक्षित तिथि: {{date}}"
   },
   "favorites": {
     "title": "पसंदीदा शीट",
