--- a/src/i18n/locales/uk/mypage.json
+++ b/src/i18n/locales/uk/mypage.json
@@ -88,7 +88,8 @@
     "preview": "Попередній Перегляд",
     "downloadUnavailable": "Завантаження Недоступне",
     "preorderInProgress": "Виробництво в Процесі",
-    "preorderInProgressWithDeadline": "Виробництво в Процесі (~{{deadline}} очікуване завершення)"
+    "preorderInProgressWithDeadline": "Виробництво в Процесі (~{{deadline}} очікуване завершення)",
+    "expectedCompletionDate": "Очікувана дата: {{date}}"
   },
   "favorites": {
     "title": "Обрані Ноти",
