--- a/src/i18n/locales/zh-CN/mypage.json
+++ b/src/i18n/locales/zh-CN/mypage.json
@@ -88,7 +88,8 @@
     "preview": "预览",
     "downloadUnavailable": "下载不可用",
     "preorderInProgress": "制作进行中",
-    "preorderInProgressWithDeadline": "制作进行中 (~{{deadline}} 预计完成)"
+    "preorderInProgressWithDeadline": "制作进行中 (~{{deadline}} 预计完成)",
+    "expectedCompletionDate": "预计完成日期: {{date}}"
   },
   "favorites": {
     "title": "收藏的乐谱",
