--- a/src/i18n/locales/pt/mypage.json
+++ b/src/i18n/locales/pt/mypage.json
@@ -88,7 +88,8 @@
     "preview": "Visualizar",
     "downloadUnavailable": "Download Indisponível",
     "preorderInProgress": "Produção em Andamento",
-    "preorderInProgressWithDeadline": "Produção em Andamento (~{{deadline}} conclusão prevista)"
+    "preorderInProgressWithDeadline": "Produção em Andamento (~{{deadline}} conclusão prevista)",
+    "expectedCompletionDate": "Data prevista: {{date}}"
   },
   "favorites": {
     "title": "Partituras Favoritas",
