--- a/src/i18n/locales/zh-TW/mypage.json
+++ b/src/i18n/locales/zh-TW/mypage.json
@@ -88,7 +88,8 @@
     "preview": "預覽",
     "downloadUnavailable": "下載不可用",
     "preorderInProgress": "製作進行中",
-    "preorderInProgressWithDeadline": "製作進行中 (~{{deadline}} 預計完成)"
+    "preorderInProgressWithDeadline": "製作進行中 (~{{deadline}} 預計完成)",
+    "expectedCompletionDate": "預計完成日期: {{date}}"
   },
   "favorites": {
     "title": "我的最愛樂譜",
