--- a/src/i18n/locales/zh-TW/sheetDetail.json
+++ b/src/i18n/locales/zh-TW/sheetDetail.json
@@ -71,8 +71,8 @@
   "refundPolicyLinkText": "詳情請查看我們的",
   "refundPolicyLinkSuffix": "",
   "description": "詳細說明",
-  "preorderAddToCart": "加入預購購物車",
-  "preorderBuyNow": "申請優先製作",
+  "preorderAddToCart": "加入購物車",
+  "preorderBuyNow": "立即購買",
   "preorderPlaceholder": {
     "title": "目前正在製作佇列中的樂譜",
     "description": "下單時將優先製作。",
